--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="page"> <!-- Defining the #page section with the section tag -->
             <header> <!-- Defining the header section of the page with the appropriate tag -->
                 <hgroup>
-                    <h1>vSpeed</h1>
+                    <h1><img src="vspeed.PNG" alt="vspeed" height="90px"> vSpeed</h1>
                     <h3>Workload as a f(virtuality)</h3>
                 </hgroup>
             </header>
